--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.32</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
