--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,9 @@ spring:
     name: project
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5433/social-networks
+#    url: jdbc:postgresql://localhost:5433/social-
+    url: jdbc:postgresql://localhost:5433/registration
+
     username: postgres
     password: Kaiou
   jpa:
@@ -12,6 +14,24 @@ spring:
     database: postgresql
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
+
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: kaioufatimazahra@gmail.com
+    password: dozj zegh hugg fynj
+
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+          ssl:
+            trust: smtp.gmail.com
+
+
+
 project:
   app:
     jwtSecret: scscsccscsytuytuccuuuuuttttttydfhdhdjdjhwsefqs
